--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
-body{ background-image: url("fishies.png");} 
+body{ background-image: url("fishies.gif");} 
 p { color: blue; } 
 h3{ color: white; }
