--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
-body{ background-image: url("fishies.gif");} 
+body{ background-image: url("Jenttila/jenttila.github.io/blob/main/fishies.GIF");} 
 p { color: blue; } 
 h3{ color: white; }
