--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
-body{ background-image: url("blob/main/fishies.GIF");} 
+body{ background-image: url("https://github.com/Jenttila/jenttila.github.io/commit/6ea0aea40b45ae5eb23df1806c5564367a268a4d");} 
 p { color: blue; } 
 h3{ color: white; }
