--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-body{ background-image: url("https://github.com/Jenttila/fishies.gif") no-repeat center center fixed; 
+html{
+   background-image: url("https://github.com/Jenttila/fishies.gif") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
