--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,11 @@ p {
 h1 {
    font-size: 20px; 
    }
+.div {
+   border-style: dotted;
+   border-width: 2px;
+   width: 100px;
+   height: 100px;
+   }
+   
+   
