--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,9 @@ h1 {
    width: 100px;
    height: 100px;
    }
+ol {
+   list-style-type: upper-alpha;
+   }
+ul {
+   list-style-type: square;
+   }
