--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
- background-image: url("https://github.com/Jenttila/project/blob/main/fishies.gif");
+ background-image: url("fishies.gif");
  background-color: #cccccc;
 }
 p { 
