--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,12 @@ p {
    color: green;
    } 
 h1 {
-   font-size: 20px; 
+   font-size: 20px;
    }
 .borders {
    border-style: dotted;
    border-width: 2px;
-   width: 100px;
-   height: 100px;
+   border-color: black;
    }
 ol {
    list-style-type: upper-alpha;
