--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,12 @@ p {
    font-size: 12px; 
    color: green;
    background-color: white;
+   background-width: auto;
    } 
 .h1 {
    font-size: 20px;
    background-color: white;
+   background-width: auto;
    }
 .borders {
    border-style: dotted;
