--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,12 @@ p {
    font-size: 12px; 
    color: green;
    background-color: white;
-   border-width: auto;
+   width: initial;
    } 
 .h1 {
    font-size: 20px;
    background-color: white;
-   border-width: auto;
+   width: initial;
    }
 .borders {
    border-style: dotted;
