--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ body {
 p { 
    font-size: 12px; 
    color: green;
+   border-radius: 25px;
+   background-color: yellow;
    } 
 .headings {
    font-size: 20px;
@@ -14,7 +16,7 @@ p {
    border-style: dotted;
    border-width: 2px;
    border-color: black;
-   background-color: white;
+   background-color: light blue;
    width: initial;
    }
 ol {
