--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,14 @@ body {
  background-color: #cccccc;
 }
 p { 
-   font-size: 12px; 
+   font-size: 36px; 
    color: green;
    border-radius: 25px;
    background-color: yellow;
+   margin-top: 100px;
+   margin-bottom: 100px;
+   margin-right: 150px;
+   margin-left: 80px;
    } 
 .headings {
    font-size: 20px;
