--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ p {
 .headings {
    font-size: 20px;
    width: initial;
-   background-color: lightblue;
+   background-color: blue;
    }
 .borders {
    border-style: dotted;
