--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ p {
    font-size: 20px;
    width: initial;
    background-color: blue;
+   padding-top: 50px;
+   padding-right: 30px;
+   padding-bottom: 50px;
+   padding-left: 80px;
    }
 .borders {
    border-style: dotted;
@@ -29,8 +33,8 @@ ul {
    list-style-type: square;
    }
 figure {
-   background-color: blue;
+   background-color: lightblue;
   }
 div {
-   background-color: blue;
+   background-color: lightblue;
  }
