--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ p {
    } 
 .headings {
    font-size: 20px;
-   width: initial;
+   width: 200;
    background-color: blue;
    padding-top: 50px;
    padding-right: 30px;
