--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
  background-color: #cccccc;
 }
 p { 
-   display: inline-block;
+   display: block;
    float: left;
    font-size: 36px; 
    color: green;
