--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,17 @@ p {
    margin-left: 10px;
    } 
 .headings {
-   display: inline;
+   display: inline-block;
    font-size: 20px;
    width: 200;
-   background-color: blue;
+   background-color: lightblue;
    padding-top: 50px;
    padding-right: 30px;
    padding-bottom: 50px;
    padding-left: 80px;
    }
 .borders {
-   display: inline;
+   display: block;
    border-style: dotted;
    border-width: 2px;
    border-color: black;
@@ -37,11 +37,11 @@ ul {
    list-style-type: square;
    }
 figure {
-   display: inline;
+   display: inline-block;
    background-color: lightblue;
   }
 div {
-  display: inline; 
+  display: block; 
   background-color: lightblue;
  
  }
