--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ p {
    margin-left: 10px;
    } 
 .headings {
-   display: inline-block;
+   display: block;
    font-size: 20px;
    width: 200;
    background-color: lightblue;
