--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
 }
 p { 
    display: block;
+   text-align: center;
    font-size: 36px; 
    color: green;
    border-radius: 25px;
@@ -15,6 +16,7 @@ p {
    } 
 .headings {
    display: block;
+   text-align: center;
    font-size: 20px;
    width: 200;
    background-color: lightblue;
@@ -40,7 +42,7 @@ figure {
    background-color: lightblue;
   }
 div {
-  display: inline-block; 
+  display: block; 
   background-color: lightblue;
  
  }
