--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
  background-color: #cccccc;
 }
 p { 
-   display: block;
+   display: inline-block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
@@ -13,7 +13,7 @@ p {
    background-color: yellow;
    } 
 .headings {
-   display: block;
+   display: inline-block;
    text-align: center;
    font-size: 20px;
    width: 200;
@@ -24,7 +24,7 @@ p {
    padding-left: 80px;
    }
 .borders {
-   display: block;
+   display: inline-block;
    border-style: dotted;
    border-width: 2px;
    border-color: black;
@@ -40,7 +40,7 @@ figure {
    background-color: lightblue;
   }
 div {
-  display: block; 
+  display: inline-block; 
   background-color: lightblue;
  
  }
