--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ p {
    background-color: yellow;
    } 
 .headings {
-   display: inline-block;
+   display: block;
    font-size: 20px;
    width: 200;
    background-color: lightblue;
