--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ p {
    background-color: yellow;
    } 
 .headings {
-   display: block;
+   display: table;
    font-size: 20px;
    width: 200;
    background-color: lightblue;
@@ -22,7 +22,7 @@ p {
    padding-left: 80px;
    }
 .borders {
-   display: inline-block;
+   display: table;
    border-style: dotted;
    border-width: 2px;
    border-color: black;
