--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 body {
  background-image: url("fishies.gif");
  background-color: #cccccc;
-}
+ width: 90%;
+ margin-left: auto;
+ margin-right: auto;  
+ }
 p { 
    display: inline-block;
    margin-left: auto;
@@ -38,4 +41,36 @@ figure {
 div {
   display: inline-block; 
   background-color: lightblue;
+ }
+header {
+  background-color: #666;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: white;
+}
+nav {
+  float: left;
+  width: 30%;
+  height: 300px; /* only for demonstration, should be removed */
+  background: #ccc;
+  padding: 20px;
+}
+article {
+  float: left;
+  padding: 20px;
+  width: 70%;
+  background-color: #f1f1f1;
+  height: 300px;
+}
+footer {
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+section:after {
+  content: "";
+  display: table;
+  clear: both;
 }
