--- a/styles.css
+++ b/styles.css
@@ -43,11 +43,11 @@ div {
   background-color: lightblue;
  }
 header {
-  background-color: #666;
+  background-color: #90EE80;
   padding: 30px;
   text-align: center;
   font-size: 35px;
-  color: white;
+  color: #5845B1;
 }
 nav {
   float: left;
