--- a/styles.css
+++ b/styles.css
@@ -43,31 +43,33 @@ div {
   background-color: lightblue;
  }
 header {
-  background-color: #90EE80;
+  background-color: #899965;
   padding: 30px;
   text-align: center;
   font-size: 35px;
-  color: #5845B1;
+  color: #2C2938;
 }
 nav {
   float: left;
   width: 30%;
   height: 300px; /* only for demonstration, should be removed */
-  background: #ccc;
+  background: #D1CF8C;
   padding: 20px;
+  color: #2C2938;
 }
 article {
   float: left;
   padding: 20px;
   width: 70%;
-  background-color: #f1f1f1;
+  background-color: #D1CF8C;
   height: 300px;
+  color: #2C2938;
 }
 footer {
-  background-color: #777;
+  background-color: #899965;
   padding: 10px;
   text-align: center;
-  color: white;
+  color: #2C2938;
 }
 section:after {
   content: "";
