--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ div {
   float: left;
   padding: 20px;
   width: 70%;
-  background-color: #D1CF8C;
+  background-color: #B98B62;
   height: 300px;
   color: #2C2938;
 }
