--- a/styles.css
+++ b/styles.css
@@ -52,10 +52,12 @@ div {
 #nav {
   float: left;
   width: 30%;
-  height: 300px; /* only for demonstration, should be removed */
+  height: 300px; 
   background: #D1CF8C;
   padding: 20px;
   color: #2C2938;
+  list-style-type: none;
+  text-decoration: none;
 }
 #article {
   float: left;
