--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
  padding: 20px;
  }
 p { 
+   position: relative;
    margin-left: auto;
    margin-right: auto;
    font-size: 36px; 
@@ -13,6 +14,7 @@ p {
    background-color: yellow;
    } 
 .headings {
+   position: relative;
    background-color: lightblue;
    padding-top: 50px;
    padding-right: 30px;
@@ -20,6 +22,7 @@ p {
    padding-left: 80px;
    }
 .borders {
+   position: relative;
    border-style: dotted;
    border-width: 2px;
    border-color: black;
@@ -35,10 +38,12 @@ figure {
    background-color: lightblue;
   }
 div {
+  position: relative;
   display: inline-block; 
   background-color: lightblue;
  }
 #header {
+  position: relative;
   background-color: #899965;
   padding: 30px;
   text-align: center;
@@ -57,6 +62,7 @@ div {
   height: 100%;
 }
 #article {
+  position: relative;
   padding: 20px;
   width: 70%;
   background-color: #B98B62;
