--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,8 @@ div {
   color: #2C2938;
 }
 #section:after {
+  width: 20%;
+  float: left;
   padding: 20px;
   background-color: #B98B62;
   height: 300px;
