--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ div {
 #nav {
   float: left;
   width: 20%;
-  height: 100%
+  height: 100%;
   background: #D1CF8C;
   padding: 20px;
   color: #2C2938;
