--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,3 @@
-body {
- background-image: url("fishies.gif");
- background-color: #cccccc;
- transition: margin-left .5s;
- padding: 20px;
- }
-p { 
-   font-size: 36px; 
-   color: green;
-   border-radius: 25px;
-   background-color: yellow;
-   } 
-.headings {
-   background-color: lightblue;
-   padding-top: 50px;
-   padding-right: 30px;
-   padding-bottom: 50px;
-   padding-left: 80px;
-   }
-ol {
-   list-style-type: upper-alpha;
-   }
-ul {
-   list-style-type: square;
-   }
-figure {
-   background-color: lightblue;
-  }
-div {
-  background-color: lightblue;
- }
-#header {
-  background-color: #899965;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: #2C2938;
-}
-#nav {
-  float: left;
-  width: 20%;
-  height: 100%
-  background: #D1CF8C;
-  padding: 20px;
-  color: #2C2938;
-  list-style-type: none;
   text-decoration: none;
 }
 #article {
@@ -57,13 +11,6 @@ div {
   height: 300px;
   color: #2C2938;
 }
-#footer {
-  clear:both;
-  background-color: #899965;
-  padding: 10px;
-  text-align: center;
-  color: #2C2938;
-}
 #section {
   padding: 20px;
   background-color: #B98B62;
@@ -72,4 +19,38 @@ div {
 }
 .slidetotheright {
   width 80%;
+}
+.header, .footer {
+  padding: 10px;
+  text-align: center;
+  background-color: #2C2938;
+}
+.column {
+  float: left;
+  padding: 15px;
+}
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.menu {
+  width: 25%;
+}
+.content {
+  width: 70%;
+}
+.menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.menu li {
+  padding: 8px;
+  margin-bottom: 8px;
+  background-color: #33b5e5;
+  color: #ffffff;
+}
+.menu li:hover {
+  background-color: #0099cc;
 }
