--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
-.header, .footer {
+.header {
   padding: 10px;
   text-align: center;
-  background-color: #2C2938;
+  background-color: #899965;
 }
-.column {
+.footer {
+  clear: both;
+  padding: 10px;
+  text-align: center;
+  background-color: #899965;
+}
+.sidebar {
   float: left;
   padding: 15px;
 }
