--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,5 @@
-.header {
-  padding: 10px;
-  text-align: center;
-  background-color: #899965;
-}
-.footer {
-  clear: both;
+.header, .footer {
+  clear:both;
   padding: 10px;
   text-align: center;
   background-color: #899965;
