--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
 .menu li {
   padding: 8px;
   margin-bottom: 8px;
-  background-color: #33b5e5;
+  background-color: #D1CF8C;
   color: #ffffff;
 }
 .menu li:hover {
