--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,11 @@
 }
 .border {
     border-top: 1px solid #2C2938;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+li {
+  display: inline;
+}
