--- a/styles.css
+++ b/styles.css
@@ -42,12 +42,11 @@
 }
 .border {
     border-top: 1px solid #2C2938;
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  background-color: #D1CF8C;
+.headerul {
+  clear:both;
+  padding: 15px;
   text-align: center;
+  background-color: #D1CF8C;
 }
 li {
   display: inline;
