--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@
 }
 .border {
     border-top: 1px solid #2C2938;
-.headerul {
+.secondheader {
   clear:both;
   padding: 5px;
   text-align: center;
