--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,52 @@
-.header, .footer {
-  clear:both;
-  padding: 10px;
-  text-align: center;
-  background-color: #899965;
-}
-.sidebar {
-  float: left;
-  padding: 15px;
-}
-.rsidebar{
-  float: right;
-  padding: 15px;
-} 
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-.menu {
-  width: 25%;
-  height: 100%;
-  background-color: #B98B62;
-}
-.content {
-  width: 70%;
-}
-.menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 20px;
-}
-.menu li {
-  padding: 8px;
-  margin-bottom: 8px;
-  background-color: #D1CF8C;
-  color: #ffffff;
-}
-.menu li:hover {
-  background-color: #604430;
-  color: red;
+.logo {
+	float: left;
+	padding: 8px;
+	border-right: 1px solid black !important;
 }
 .border {
-    border-top: 1px solid #2C2938;
-.secondheader {
-  clear:both;
-  padding: 5px;
-  text-align: center;
-  background-color: #D1CF8C;
+	border: 1px solid black !important;
 }
-li {
-  display: inline;
+.center {
+	text-align: center;
+}
+header{
+	margin-bottom: 10px;
+}
+.row {
+	margin-bottom: 10px;
+}
+.placeholder-img {
+	width: 100px;
+	height: 100px;
+	margin: 0 20px 0 20px;
+	background: #d6d6d8;
+	border: 1px solid black !important;
+}
+.placeholder-img.large {
+	width: 200px;
+	height: 150px;
+}
+.center .placeholder-img {
+	margin: 0 auto 20px auto;
+}
+.left {
+	float: left;
+}
+.right {
+	float: right;
+}
+.placeholder-img.right {
+	margin-right: 0;
+}
+.placeholder-img.left {
+	margin-left: 0;
+}
+.full-width {
+	width: 100%;
+}
+.nav-link.active {
+	color: black;
+}
+section {
+	clear: both;
 }
