--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 	float: left;
 	height: 10px;
 	padding: 8px;
-	border-right: 1px solid black !important;
+	border-right: 1px solid;
 }
 .border {
 	border: 1px solid black !important;
