--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 	border-right: 1px solid;
 }
 .border {
-	border: 1px solid black !important;
+	border-bottom: 1px solid black !important;
 }
 .center {
 	text-align: center;
