--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 	float: left;
 	height: 10px;
 	padding: 8px;
-	border-right: 1px solid;
 }
 .border {
 	border-bottom: 1px solid black !important;
@@ -12,6 +11,7 @@
 }
 header{
 	margin-bottom: 10px;
+	width: 100%;
 }
 .row {
 	margin-bottom: 10px;
